KM-550: fixed page alignment above tablet breakpoint.

--- a/src/style.scss
+++ b/src/style.scss
@@ -886,6 +886,12 @@ a {
   }
 }
 
+@media(min-width: $tablet-nav-medium) {
+  .page {
+    padding: 107px 0px 80px 0px;
+  }
+}
+
 @media(min-width: $tablet-breakpoint) {
   .page {
     overflow: hidden;
